@@ -3,8 +3,12 @@ Version 7.13.1 [requires libcurl-7.13.1 or better]
 
 2005-02-13  Markus F.X.J. Oberhumer <mfx>
 
+        * Read callbacks (pycurl.READFUNCTION) can now return
+          pycurl.READFUNC_ABORT to immediately abort the current transfer.
+
         * The INFILESIZE, MAXFILESIZE, POSTFIELDSIZE and RESUME_FROM
-          options now automatically use the largefile version.
+          options now automatically use the largefile version to handle
+          files > 2GB.
 
         * Added missing pycurl.PORT constant.
 
